# foxgt

./: .gitignore  Cargo.toml  index.html  release.sh
.github/workflows/: release.yaml
assets/: dialog.json
src/: main.rs  menu.rs  names.rs  splash.rs  structured_dialog.rs
src/util/: mod.rs  window.rs
wasm/: index.html
