[package]
name = "trijam-300"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_common_assets = { version = "0.12.0", features = ["json"] }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
